AUTOMAKE_OPTIONS= \
				  foreign \
				  subdir-objects


bin_PROGRAMS=call
call_SOURCES= \
		include/errornum.h \
		include/vos_log.h \
		src/mac_check_1.c \
		src/mac_check.c \
		src/main.c \
		src/regcomp.c \
		src/timeout.c \
		src/timeout_select.c \
		src/toupper.c \
		src/vos_log.c
