PROJECT(HELLO)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ADD_SUBDIRECTORY(src ${EXECUTABLE_OUTPUT_PATH})          # 构建之后的二进制存放到build/bin 目录中

INSTALL(TARGETS hello 
		RUNTIME DESTINATION bin)

INSTALL(FILES COPYRIGHT README 
		DESTINATION share/doc/cmake/t2)
		
INSTALL(PROGRAMS runhello.sh 
		DESTINATION bin)

INSTALL(DIRECTORY doc/ 
		DESTINATION share/doc/cmake/t2)
